<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">OneMore</string>
    <string name="title_activity_main2"></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="entries_str">
        <item>中文</item>
        <item>英文</item>
    </string-array>
    <string-array name="entries_value_str">
        <item>Chinese</item>
        <item>English</item>
    </string-array>

    <string-array name="par_activity">
        <item>相距甚远</item>
        <item>我要的骑行</item>
    </string-array>

    <string-array name="comment_list">
        <item>nananalana自己的评论</item>
        <item>nananalana妹妹的评论</item>
        <item>nananalana姐姐的评论</item>
        <item>nananalana弟弟的评论</item>
    </string-array>

    <string-array name="com_pri_list">
        <item>nananalana自己评论了你并和你打了一声招呼</item>
        <item>nananalana妹妹评论了你并说你一点都不好看</item>
        <item>nananalana姐姐评论了你，她说她喜欢深圳</item>
        <item>nananalana弟弟评论了你，说喜欢你的手机</item>
    </string-array>

    <string name="action_settings">设置</string>
    <string name="language_menu">选择语言</string>

    <!--保存用户的用户名和密码-->
    <string name="user_id">输入手机号/邮箱/昵称</string>
    <string name="user_password"></string>
    <string name="user_nikoname">lala</string>
    <string name="user_age">21</string>
    <string name="user_address">湖南省</string>
    <string name="user_phonenumber">18251827779</string>
    <string name="user_introduction">自在飞花轻似梦</string>
    <string name="user_birthday">1995.10.18</string>
    <string name="user_hobby">羽毛球、乒乓球</string>
    <!--用来显示登陆登出-->
    <string name="log_in">登录</string>
    <string name="log_in_prepare">登陆中</string>
    <!--用户创建活动相关-->
    <string name="activity_title">求羽毛球球友</string>
    <string name="activity_content">这周六下午，本人想找三个人，进行羽毛球双打，求球友！</string>
    <string name="activity_classification">运动</string>
    <string name="user_place_order">南航羽毛球馆</string>
    <string name="user_time_order">本周六</string>
    <string name="user_person_number_order">3</string>
    <string name="user_activity_more_join_number">0</string>
    <string name="user_activity_more_comemt_number">0</string>
    <string name="user_activity_more_praise_number">0</string>
    <!--活动名称-->
    <string name="trvel">旅游</string>
    <string name="play">桌游</string>
    <string name="sport">运动</string>
    <string name="eating">餐饮</string>
    <string name="sing">K歌</string>
    <string name="movie">电影</string>

    <string name="search_title">搜索</string>
    <string name="search_hint">搜索感兴趣的活动或用户</string>
    <string name="title_activity_participate_plans">已参加活动</string>
    <string name="tile_create_activity_layout">创建活动</string>
</resources>
