<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:example="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@android:color/holo_blue_light"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/person_album"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </ImageView>

    <RelativeLayout
        android:background="#00ffff"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/person_album"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="20dp"
            android:text="@string/activity_title"
            android:id="@+id/title_view"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <com.example.yanghuan.onemorecharge.RoundeImageView
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:src="@drawable/touxiang"
            android:id="@+id/head_view"
            app:borderRadius="20dp"
            app:type="circle"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            >
        </com.example.yanghuan.onemorecharge.RoundeImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nikoname"
            android:textSize="24dp"
            android:textColor="@android:color/white"
            android:id="@+id/user_name"
            android:layout_above="@+id/tag_photo"
            android:layout_alignLeft="@+id/head_view"
            android:layout_alignStart="@+id/title_view" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tag_photo"
            android:src="@drawable/symbol_black"
            android:layout_alignBottom="@+id/head_view"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sport"
            android:textColor="@android:color/white"
            android:id="@+id/tag"
            android:layout_alignBottom="@+id/head_view"
            android:layout_toLeftOf="@+id/tag_photo"
            android:layout_toStartOf="@+id/tag_photo" />

    </RelativeLayout>

</RelativeLayout>