<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0f7fa"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


            <TextView
                android:id="@+id/phone"
                android:background="@drawable/phone"
                android:layout_toLeftOf="@+id/user_number"
                android:layout_marginTop="50dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/user_number"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:hint="@string/user_id"
                android:textSize="12dp"
                android:textColor="#888888"
                android:inputType="text"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/btn_more_pop"
                android:layout_width="10dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/passwd"
                android:background="@drawable/passwd"
                android:layout_toLeftOf="@+id/user_password"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                android:hint="请输入密码"
                android:text="@string/user_password"
                android:textSize="12dp"
                android:textColor="#888888"
                android:inputType="text"
                android:paddingLeft="10dp" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_rect_angle"
            android:textColor="#ffffff"
            android:layout_marginTop="207dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/log_in"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/btn_login_regist"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="25dp"
            android:text="注册新账号"
            android:textColor="#00bcd4"
            android:background="#00000000"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/btn_login"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="75dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="记住密码"
            android:textStyle="bold"
            android:textSize="12dp"
            android:id="@+id/checkBox2"
            android:layout_alignTop="@+id/btn_login_regist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remenber_check"
            android:checked="true"
            android:layout_alignTop="@+id/checkBox2"
            android:layout_toRightOf="@+id/checkBox2"
            android:layout_toEndOf="@+id/checkBox2" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:id="@+id/relativeLayout3">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line1"
            android:layout_marginBottom="46dp"
            android:layout_above="@+id/weibo"
            android:layout_toLeftOf="@+id/View2"
            android:layout_marginRight="10dp"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line1"
            android:layout_marginBottom="46dp"
            android:layout_above="@+id/weibo"
            android:layout_toRightOf="@+id/View2"
            android:layout_marginLeft="10dp"
            android:id="@+id/imageView1" />

        <TextView
            android:text="第三方登录"
            android:layout_above="@+id/weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#adadad"
            android:textSize="16dp"
            android:layout_marginBottom="40dp"
            android:paddingTop="2dp"
            android:id="@+id/View2" />


        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/weibo"
            android:background="@drawable/weibo"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/View2"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/qq"
            android:background="@drawable/qq"
            android:layout_marginBottom="70dp"
            android:layout_marginRight="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/View2"
            android:layout_alignEnd="@+id/View2" />

    </RelativeLayout>
</RelativeLayout>